
2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h: added check for COB_UNIX_LF again,
	  externalized cb_unix_lf for use in sqlxfdgen.c
	* parser.y, ppparse.y: removed support for Bison < 3,
	  fixing deprecation warnings

2020-01-28  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c, typeck.c : Update to avoid C compile warnings
	* field.c, codegen.c : Update to avoid C compile warnings

2020-01-24  Ron Norman <rjn@inglenet.com>

	* parser.y: Add SUPPRESS WHEN "string"
	* tree.h: Removed CB_PREFIX_KEYS and added 'suppress' to cb_alt_key
	* codegen.c: Changed to no longer reference field in cob_file
			All setup for cob_file is now done with function calls

2020-01-12  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: bug #513 (partial) added dialect option
	  cb_sync_left_right and if it isn't ignored warn again about it being
	  not implemented
	* parser.y, tree.h: added flag_sync_left, flag_sync_right
	  (currently not taken care of in codegen!)
	* parser.y, field.c, tree.h: removed flag_ignore_sync, instead handle
	  cb_binary_sync_clause == CB_IGNORE in (validate_pic)

2020-01-11  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_module_init): split module initialization into
	  calling of new generated function which includes every static reference
	  and the "local" part that references program-local variables,
	  fixing #611 RECURSIVE programs without correct source references
	* codegen.c (output_function_prototypes, output_internal_function):
	  generate module initialization function and invoke it

2020-01-02  Ron Norman <rjn@inglenet.com>

	* parser.y: Reenable READ ADVANCING/RETRY/IGNORE clauses
	* codegen.c: Add code back for READ ADVANCING

2020-01-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_stmt): fixed bad check in file related statements

2020-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.h, parser.y, tree.h, typeck.c: strengthened ASSIGN syntax checks
	  (bug #553).